<resources>
    <string name="app_name">User Directory</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="user_name">User Name</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="_91_0000000000">+91 0000000000</string>
    <string name="network_error">Network Error</string>
    <string name="retry">Retry</string>
    <string name="back_icon">Back Icon</string>
</resources>